--- a/about.css
+++ b/about.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: system-ui;
-    background: url(bimage.png) no-repeat center center fixed;
+    background: url(image1.png) no-repeat center center fixed;
     background-size: cover;
     display: flex;
     flex-direction: column; 
